2001-11-10 04:20 GMT +0700 Andi Jahja <harbour@cbn.net.id>
   * source/rdd/dbf1.c
      ! comment unused var ULONG ulRecNo

   * source/rdd/dbfntx/dbfntx1.c
      ! add type cast for MsVC

2001-11-09 10:30 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * harbour/source/rtl/persist.prg
      * fixed error handling for LoadFromText()
        Both it and LoadFromFile() now return lSuccess

2001-11-09 14:41 GMT Dave Pearson <davep@davep.org>
   * source/compiler/gencobj.c
      * Further fixes to remove core dumps regarding missing config files
        or missing information in the config file.

2001-11-08 23:42 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rtl/dummy.prg
     - removed dummy ordKeyVal()
   * source/rdd/dbcmd.c
     + added ordKeyVal() (need support by specifics RDDs)
   * source/rdd/dbfcdx/dbfcdx1.c
     + added support for ordBagName()
     + added support for ordKeyVal()
     ! fixed hb_cdxSorttoND, numeric key conversion
     ! fixed hb_cdxKeyGetItem(), for numeric & date keys
   * source/rdd/dbfcdx/dbfcdx2.h
     + added declaration for hb_cdxKeyGetItem

2001-11-08 22:40 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
     utils/hbmake/hbmake.prg
      * Fix some small problem with hbmake under linux

2001-11-09 05:20 GMT +7 Andi Jahja <harbour@cbn.net.id>
   * utils/hbmake/hbmutils.prg
     ! add Copyright header

2001-11-09 03:00 GMT +7 Andi Jahja <harbour@cbn.net.id>
   * utils/hbmake/hbmutils.prg
     ! some clean ups to enable compilation under MsVC
       To Luiz: Please use the standard " for include rather
       than ' eg. #include "foo.ch" instead of #include 'foo.ch'

2001-11-08 14:53 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     + added support for ordFor()

2001-11-07 23:00 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
     utils/hbmake/hbmake.prg
      * Fix some small problem with hbmake under linux
